Expose more things on `window.FrankerFaceZ.utilities`. Fix a bug with JavaScript driven layout elements when the FFZ menu is fullscreened by not hiding those elements, only making them invisible and putting FFZ content on top.

--- a/src/sites/twitch-twilight/styles/main_menu.scss
+++ b/src/sites/twitch-twilight/styles/main_menu.scss
@@ -18,7 +18,10 @@
 	}
 
 	&.maximized {
-		position: unset !important;
+		position: absolute;
+		top: 0 !important;
+		left: 0 !important;
+
 		width: 100%;
 		height: 100%;
 
@@ -46,5 +49,5 @@
 
 
 .ffz-has-menu > :not(.ffz-main-menu) {
-	display: none !important
+	visibility: hidden;
 }
